--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -119,16 +119,6 @@
   
         <!-- Sidebar -->
         <div class="sidebar">
-            <!-- Sidebar user panel (optional) -->
-            <!-- <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                <div class="image">
-                    <img src="assets/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
-                </div>
-                <div class="info">
-                    <a href="#" class="d-block">Alexander Pierce</a>
-                </div>
-            </div> -->
-  
             <!-- Sidebar Menu -->
             <nav class="mt-2">
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
@@ -141,22 +131,36 @@
                     </li>
                     <li class="nav-item has-treeview">
                         <a href="#" class="nav-link">
-                            <i class="nav-icon fas fa-wrench"></i>
+                            <i class="nav-icon fas fa-chart-bar"></i>
+                            <p>Reportes<i class="right fas fa-angle-left"></i></p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item" style="padding-left:20px">
+                                <a href="inicio" class="nav-link">
+                                    <i class="fas fa-file-alt nav-icon"></i>
+                                    <p>Reporte 1</p>
+                                </a>
+                            </li>
+                            <li class="nav-item" style="padding-left:20px">
+                                <a href="inicio" class="nav-link">
+                                    <i class="fas fa-file-alt nav-icon"></i>
+                                    <p>Reporte 2</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item has-treeview">
+                        <a href="#" class="nav-link">
+                            <i class="nav-icon fas fa-cog"></i>
                             <p>Parametrización<i class="right fas fa-angle-left"></i></p>
                         </a>
                         <ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">
+                            <li class="nav-item" style="padding-left:20px">
+                                <a href="inicio" class="nav-link">
                                     <i class="fas fa-tachometer-alt nav-icon"></i>
                                     <p>Máquinas</p>
                                 </a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a href="#" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Topics</p>
-                                </a>
-                            </li> -->
                         </ul>
                     </li>
                 </ul>
@@ -174,8 +178,8 @@
     </aside>
 
     <footer class="main-footer">
-        <div class="float-right d-none d-sm-inline"> Anything you want </div>
-        <strong>Copyright &copy; 2014-2019 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
+        <div class="float-right d-none d-sm-inline"> Plan: PREMIUM</div>
+        <strong>Copyright &copy; 2020 EMPRESITA.</strong> Todos los derechos reservados.
     </footer>
 </div>
 <!-- ./wrapper -->
