--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -10,7 +10,7 @@
 				<div class="col-sm-6">
 					<ol class="breadcrumb float-sm-right">
 						<li class="breadcrumb-item"><a href="#">Parametrización</a></li>
-						<li class="breadcrumb-item active"><a href="#">Máquinas</a></li>
+						<li class="breadcrumb-item active">Máquinas</li>
 					</ol>
 				</div>
 			</div>
